tests/ui/stability-attribute/stability-attribute-non-staged.stderr
error[E0658]: stability attributes may not be used outside of the standard library
  --> $DIR/stability-attribute-non-staged.rs:1:1
   |
LL | #[unstable()]
   | ^^^^^^^^^^^^^

error[E0546]: missing 'feature'
  --> $DIR/stability-attribute-non-staged.rs:1:1
   |
LL | #[unstable()]
   | ^^^^^^^^^^^^^

error[E0547]: missing 'issue'
  --> $DIR/stability-attribute-non-staged.rs:1:1
   |
LL | #[unstable()]
   | ^^^^^^^^^^^^^

error[E0658]: stability attributes may not be used outside of the standard library
  --> $DIR/stability-attribute-non-staged.rs:5:1
   |
LL | #[stable()]
   | ^^^^^^^^^^^

error[E0546]: missing 'feature'
  --> $DIR/stability-attribute-non-staged.rs:5:1
   |
LL | #[stable()]
   | ^^^^^^^^^^^

error[E0542]: missing 'since'
  --> $DIR/stability-attribute-non-staged.rs:5:1
   |
LL | #[stable()]
   | ^^^^^^^^^^^

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0542, E0546, E0547, E0658.
For more information about an error, try `rustc --explain E0542`.
